# crmhack

./: .gitignore  README.md  auto_install.sh  nginx.conf  redeploy.sh  server.conf
backend/: README.md  pyproject.toml  start.sh
backend/app/: __main__.py
backend/app/api/: bert_parted.py  bert_pred.py  bert_sentiment.py  main.py  models.py  network_evolution_inf.py  noise.py  politeness.py  text_speed.py  vosk_api.py
backend/app/core/: settings.py
backend/app/data/: README.md  empirical.pkl  etalon.pkl
backend/app/data/vosk/: download.sh
backend/app/vosk/: download.sh
frontend/: pubspec.yaml
frontend/android/app/: build.gradle
frontend/android/app/src/debug/: AndroidManifest.xml
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/com/itatmisis/frontend/: MainActivity.kt
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: api.dart  api_entities.dart  api_entities.g.dart  dashboard_page.dart  generated_plugin_registrant.dart  graph_page.dart  index_page.dart  main.dart
frontend/lib/audio_util/: demo_drop_downs.dart  get_track_url.dart  get_track_url_stub.dart  get_track_url_web.dart  recorder_state.dart  temp_file.dart
frontend/linux/: CMakeLists.txt
frontend/web/: index.html
ml_notebooks/: doc2vec+GCN_train.ipynb
test-data/: voice.webm  voice10.webm  voice2.webm  voice4.webm  voice5.webm  voice8.webm  voice9.webm
