[tool.poetry]
name = "crmhack"
version = "0.1.0"
description = ""
authors = ["TeaDove <peter.ibragimov@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
fastapi = "^0.68.0"
torch = ">=1.1.0"
uvicorn = "^0.15.0"
loguru = "^0.5.3"
python-multipart = "^0.0.5"
vosk = "^0.3.30"
ujson = "^4.1.0"
scipy = "^1.7.1"
pytorch-pretrained-bert = "0.6.2"
pymorphy2 = "0.8"
transformers = "^4.9.2"
transformers-interpret = "^0.5.2"
gensim = "^4.0.1"
networkx = "^2.6.2"
pydot = "^1.4.2"
celluloid = "^0.2.0"
aiofiles = "^0.7.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
